<resources>
    <string name="app_name">FundatecHeroTI22</string>
    <string name="button_2">Botão 2</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="login_error">Erro ao fazer login! Tente novamente mais tarde!!!</string>
    <string name="create_user">Criar usuário</string>
    <string name="new_here">Novo por aqui?</string>
    <string name="email_error">Digite um email valido</string>
    <string name="password_error">Digite uma senha valida</string>
</resources>